some final remainders of replacing URLs by URIs as much as possible, when used as keys in collections